--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <span class="navbar-brand" href="#">স্ক্যাডা</span>
         </nav>
 
+        <h3 id="station">
+                স্টেশন আইডি  
+            <span id="station_id">০০১</span>
+        </h3>
         <!-- Cards LIne 1 -->
         <div class="card-deck">
             <div class="card card-inverse  text-center">
@@ -90,5 +94,29 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script>
+        // making connections
+        var socket = io.connect("http://localhost:9001");
+        //var socket = io.connect("http://116.193.218.253:9001");
+
+        var station_id = document.getElementById('station_id');
+        var btn = document.getElementById('send');
+        var output = document.getElementById('output');
+
+        //emit events
+
+        btn.addEventListener('click', function () {
+            socket.emit('chat', {
+                station_id: stn_no.value
+            });
+        });
+
+        // listen events
+        socket.on('chat', function (dataobj) {
+            station_id.innerHTML = dataobj.station_id + ':</strong> </p>ব্যাটারি ভোল্টেজঃ ' + dataobj.batt_stat + ' ভোল্ট </p>'+ 'টারবাইন ভোল্টেজঃ' + dataobj.turb_vol + ' ভোল্ট </p>'
+            output.innerHTML = output.innerHTML+'ইনলেট প্রেশারঃ ' + dataobj.inlet_pr + 'বার </p> আউটলেট প্রেশারঃ ' + dataobj.outlet_pr + ' বার </p> ফ্লো-রেট প্রতি মিনিটঃ  ' + dataobj.flowrate + ' ঘন মিটার </p>'
+            output.innerHTML = output.innerHTML+'ওপেনিংঃ ' + dataobj.per_open + ' % </p> সেট ভ্যালুঃ ' + dataobj.set_val + '</p> মোট পানির প্রবাহঃ ' + dataobj.total_flow + ' ঘন মিটার </p>'
+        });
+    </script>
   </body>
 </html>
