--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-5">
                 <div class="card card-inverse  text-center">
                     <div class="card-block">
-                        <h5 class="card-title">ব্যাটারি ভোল্টেজ</h5>
+                        <h5 class="card-title"> ব্যাটারি ভোল্টেজ &nbsp; </h5>
                         <p id="battery_voltage" class="card-text"><span>- </span> ডিসি  </p>                
                     </div>
                 </div>
@@ -62,7 +62,7 @@
             <div class="col-5">
                 <div class="card card-inverse  text-center">
                     <div class="card-block">
-                        <h5 class="card-title">টারবাইন ভোল্টেজ</h5>
+                        <h5 class="card-title"> টারবাইন ভোল্টেজ &nbsp; </h5>
                         <p id="battery_voltage" class="card-text"><span>- </span> এসি   </p>                
                     </div>
                 </div>
